# mail-manager

./: .gitignore  flake.nix  pyproject.toml
src/mail_manager/: __init__.py  classifier.py  cli.py  model.py  organiser.py
