[project]
name = "mail-manager"
version = "0.1.0"
description = "Python Module."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.2",
    "imapclient>=3.1.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# Change this
[project.scripts]
hello = "mail_manager:hello"

#[tool.uv.extra-build-dependencies]
#uup-builder = ["uv_build"]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

